# fontobene-qt5

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE-MIT  README.md  fontobene-qt5.pc.example  fontobene.pro
.github/workflows/: ci.yml
fontobene/: exception.h  font.h  fontobene.h  glyph.h  glyphlistaccessor.h  glyphlistcache.h  header.h  helpers.h
fontobene-qt5/: CMakeLists.txt  font.h  fontobene-qt5.pro  glyph.h  glyphlist.h  glyphlistaccessor.h  glyphlistcache.h  header.h  helpers.h
tests/: CMakeLists.txt  fonto.bene  main.cpp  tests.pro
